package fpt.edu.vn.gms.common;

public enum Market {
    VN, JP, US, EU, OTHER
}
