package fpt.edu.vn.gms.dto;

public record BrandDto (
        Long id,
        String name
) {
}
