package fpt.edu.vn.gms.dto;

public record VehicleModelDto(
        Long id,
        String name
) {
}
