package fpt.edu.vn.gms.entity;

import jakarta.persistence.*;
import lombok.*;

import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.List;

import org.hibernate.annotations.ColumnDefault;

import fpt.edu.vn.gms.common.enums.InvoiceStatus;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@Entity
@Table(name = "invoice")
public class Invoice {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private String code;

    @ManyToOne
    @JoinColumn(name = "price_quotation_id")
    private PriceQuotation quotation;

    @ManyToOne
    @JoinColumn(name = "service_ticket_id")
    private ServiceTicket serviceTicket;

    // Tiền cọc đã nhận
    @Column(name = "deposit_received", precision = 18, scale = 2)
    private BigDecimal depositReceived;

    // Tổng số tiền khách cần trả
    @Column(name = "final_amount", precision = 18, scale = 2)
    private BigDecimal finalAmount;

    @Enumerated(EnumType.STRING)
    @ColumnDefault("'PENDING'")
    @Builder.Default
    private InvoiceStatus status = InvoiceStatus.PENDING;

    @OneToMany(mappedBy = "invoice")
    private List<Transaction> transactions;

    @Column
    private LocalDateTime createdAt;

    @Column
    private LocalDateTime updatedAt;

    private String createdBy;

    @PrePersist
    protected void onCreate() {
        createdAt = LocalDateTime.now();
    }

    @PreUpdate
    protected void onUpdate() {
        updatedAt = LocalDateTime.now();
    }
}
